--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,8 @@
-absl-py==2.1.0
-appdirs==1.4.4
-astunparse==1.6.3
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-comm==0.2.2
-conda-repo-cli==1.0.75
-conda-verify==3.4.2
-dill==0.3.8
-et-xmlfile==1.1.0
-flatbuffers==24.3.25
-fonttools==4.25.0
-fqdn==1.5.1
-gast==0.5.4
-google-pasta==0.2.0
-grpcio==1.62.1
-h5py==3.10.0
-inflection==0.5.1
-ipywidgets==8.1.2
-isoduration==20.11.0
-jsonpointer==2.1
-jupyterlab_widgets==3.0.10
-libclang==18.1.1
-lxml==5.1.0
-missingno==0.5.2
-mkl-service==2.4.0
-ml-dtypes==0.3.2
-multiprocess==0.70.16
-munkres==1.1.4
-namex==0.0.7
-openpyxl==3.0.10
-opt-einsum==3.3.0
-optree==0.11.0
-patsy==0.5.3
-ply==3.11
-protobuf==3.20.3
-pyarrow-hotfix==0.6
-pyasn1-modules==0.2.8
-pycurl==7.45.2
-PyDispatcher==2.0.5
-pyls-spyder==0.4.0
-PyQt5==5.15.10
-PyQtWebEngine==5.15.6
-pywin32==305.1
-safetensors==0.4.2
-scikit-fuzzy==0.4.2
-scipy==1.11.4
-termcolor==2.4.0
-tokenizers==0.15.2
-torch==2.2.2
-torchaudio==2.2.2
-torchvision==0.17.2
-uri-template==1.3.0
-webcolors==1.13
-webencodings==0.5.1
-widgetsnbextension==4.0.10
-wordcloud==1.9.3
-xxhash==3.4.1
-zstandard==0.19.0
+streamlit
+numpy
+pandas
+matplotlib
+sklearn
+scipy
+skfuzzy
+os
